[gd_scene load_steps=4 format=3 uid="uid://dpcrrorybckw7"]

[ext_resource type="FontFile" uid="uid://dukadcynlsp6f" path="res://assets/fonts/BebasNeue-Regular.ttf" id="1_01lm7"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_s1uph"]
[ext_resource type="PackedScene" uid="uid://dpgklwmdgcka1" path="res://ui/level_select.tscn" id="3_37t1e"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_s1uph")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="PanelContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_01lm7")
theme_override_font_sizes/font_size = 300
text = "DICE GAME"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
alignment = 2

[node name="LevelSelectButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_01lm7")
theme_override_font_sizes/font_size = 50
text = "Select Level"

[node name="EditDeckButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_01lm7")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Edit Deck"

[node name="OptionsButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_01lm7")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Options"

[node name="ExitButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_01lm7")
theme_override_font_sizes/font_size = 50
text = "Exit Game"

[node name="LevelSelectMenu" parent="UI" instance=ExtResource("3_37t1e")]
visible = false

[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/EditDeckButton" to="." method="_on_edit_deck_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
